# proofbot

./: Cargo.toml
prompts/: system.j2  user.j2
prompts/tools/add_import/: description.j2  failure.j2  success.j2
prompts/tools/read_file/: description.j2  failure.j2  success.j2
prompts/tools/recall_directory_structure/: description.j2  success.j2
prompts/tools/update_lemma/: description.j2  failure.j2  success.j2
prompts/tools/update_proof/: description.j2  failure.j2  success.j2
prompts/tools/write_scratch_file/: description.j2  output.j2
src/: checker.rs  config.rs  constrained_file_editor.rs  context.rs  driver.rs  hacky_lean_parsing.rs  main.rs  pretty_file_tree.rs  templates.rs
