[package]
name = "proofbot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
async-openai = { version = "0.41", features = ["chat-completion", "byot"] }
serde = { version = "1", features = ["derive"] }
minijinja = "2.21"
toml = "1.1"
serde_json = "1"
tempfile = "3.27"
tracing = "0.1"
tracing-subscriber = "0.3"
ptree = "0.5"
include_dir = "0.7"
regex = "1.12"
relative-path = "2.0"
pollster = "0.4"
futures = "0.3"
colored = "3.1"
fs_extra = "1.3"
rand = "0.10"
directories = "6.0"
clap = { version = "4", features = ["derive"] }
schemars = "1.2"
walkdir = "2.5"
cap-std = "4.0"
